fixed text-alignment in footer and browse button

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -12,6 +12,10 @@
 
 }
 
+.footer p {
+  margin: 0;
+}
+
 .footer button {
 color: black !important;
 }
